# IE0724_CascoConvexo

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ccConfig.h.in
include/: CascoConvexo.h  CascoConvexo2.h  General.h  editPlot.h  getPlot.h  getPoint.h  handleCSV.h
plot/include/: CascoConvexoPlot_plot.h  General_plot.h  editPlot_plot.h  getPlot_plot.h  getPoint_plot.h
plot/src/: CascoConvexoPlot_plot.cxx  editPlot_plot.cxx  getPlot_plot.cxx  getPoint_plot.cxx  plot
src/: CascoConvexo.cxx  CascoConvexo2.cxx  editPlot.cxx  getPlot.cxx  getPoint.cxx  handleCSV.cxx
test/: CMakeLists.txt  GTest.cxx  ccConfig.h.in
test/archivos/: pruebaProfesor1.txt  pruebaProfesor2.txt  pruebainvalida1.txt  pruebainvalida2.txt  pruebainvalida3.txt
